@@ -34,6 +34,8 @@
 
 * Fixed bug which prevented Collapsible containers from toggling state correctly when multiple instances shared a parent.
 
+* Node UIs now use a ScrolledContainer for their top level container.
+
 0.9.0
 -----
 
